Category screen design.

--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -136,19 +136,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R9i-9i-Z4c">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R9i-9i-Z4c">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDg-AC-k1c">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDg-AC-k1c">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.30397227112676056" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="MDg-AC-k1c" secondAttribute="bottom" id="GuO-o5-96j"/>
+                                                <constraint firstAttribute="trailing" secondItem="R9i-9i-Z4c" secondAttribute="trailing" id="PBZ-80-13v"/>
+                                                <constraint firstItem="MDg-AC-k1c" firstAttribute="leading" secondItem="ub3-VP-Nbg" secondAttribute="leading" id="Ujl-1D-j8p"/>
+                                                <constraint firstItem="R9i-9i-Z4c" firstAttribute="leading" secondItem="ub3-VP-Nbg" secondAttribute="leading" id="Ych-dy-TK4"/>
+                                                <constraint firstItem="R9i-9i-Z4c" firstAttribute="top" secondItem="ub3-VP-Nbg" secondAttribute="top" id="iLy-yo-pqq"/>
+                                                <constraint firstItem="MDg-AC-k1c" firstAttribute="top" secondItem="ub3-VP-Nbg" secondAttribute="top" id="l1h-KF-JkF"/>
+                                                <constraint firstAttribute="trailing" secondItem="MDg-AC-k1c" secondAttribute="trailing" id="w7m-LN-blE"/>
+                                                <constraint firstAttribute="bottom" secondItem="R9i-9i-Z4c" secondAttribute="bottom" id="wKP-VQ-U9n"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="image" destination="R9i-9i-Z4c" id="zPb-XO-toR"/>
@@ -214,7 +222,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmM-Gy-gQy">
                                                     <rect key="frame" x="0.0" y="98" width="154" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.12599031690140844" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
