--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -38,24 +38,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4CC-ge-c7g">
-                                <rect key="frame" x="133" y="214" width="108" height="30"/>
+                                <rect key="frame" x="133" y="184" width="108" height="30"/>
                                 <state key="normal" title="Go to download"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="kb8-Jp-q2r"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NT3-BP-RWA">
-                                <rect key="frame" x="120" y="324" width="134" height="30"/>
+                                <rect key="frame" x="120" y="294" width="134" height="30"/>
                                 <state key="normal" title="Go in hell. Mvahaha"/>
                                 <connections>
                                     <segue destination="bhZ-dF-rNR" kind="show" id="gZW-WJ-oKV"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wZT-DH-4mh">
-                                <rect key="frame" x="159" y="434" width="57" height="30"/>
+                                <rect key="frame" x="159" y="404" width="57" height="30"/>
                                 <state key="normal" title="Pictures"/>
                                 <connections>
                                     <segue destination="nXI-KY-MPC" kind="show" id="GyW-sC-CDd"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="skh-Ve-HLH">
+                                <rect key="frame" x="96" y="514" width="182" height="30"/>
+                                <state key="normal" title="Information about the user"/>
+                                <connections>
+                                    <segue destination="X9M-VO-IFs" kind="show" id="G9z-cB-lap"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -68,8 +75,11 @@
                             <constraint firstAttribute="trailing" secondItem="4CC-ge-c7g" secondAttribute="trailing" constant="134" id="FaG-32-87J"/>
                             <constraint firstAttribute="trailing" secondItem="wZT-DH-4mh" secondAttribute="trailing" constant="159" id="I25-xO-zP0"/>
                             <constraint firstItem="NT3-BP-RWA" firstAttribute="top" secondItem="4CC-ge-c7g" secondAttribute="bottom" constant="80" id="MBo-TL-wgW"/>
-                            <constraint firstItem="4CC-ge-c7g" firstAttribute="top" secondItem="QyD-Kt-cVk" secondAttribute="bottom" constant="150" id="ex8-5i-ndi"/>
+                            <constraint firstItem="skh-Ve-HLH" firstAttribute="top" secondItem="wZT-DH-4mh" secondAttribute="bottom" constant="80" id="QqZ-Bu-Vod"/>
+                            <constraint firstItem="4CC-ge-c7g" firstAttribute="top" secondItem="QyD-Kt-cVk" secondAttribute="bottom" constant="120" id="ex8-5i-ndi"/>
                             <constraint firstAttribute="trailing" secondItem="NT3-BP-RWA" secondAttribute="trailing" constant="121" id="qGW-gc-36x"/>
+                            <constraint firstAttribute="trailing" secondItem="skh-Ve-HLH" secondAttribute="trailing" constant="97" id="xOp-cG-Uxy"/>
+                            <constraint firstItem="skh-Ve-HLH" firstAttribute="leading" secondItem="4PX-yH-gn6" secondAttribute="leading" constant="96" id="zvE-rJ-hCC"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="yfN-Lt-di0"/>
@@ -77,6 +87,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q2r-i0-Dst" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-372" y="71.514242878560722"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mjE-gI-Gpf">
+            <objects>
+                <viewController id="X9M-VO-IFs" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gj9-pw-2pd"/>
+                        <viewControllerLayoutGuide type="bottom" id="lCu-nm-bmE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Xob-TF-rAM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mq7-jN-amB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-372" y="1604"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="lP0-K7-hcs">
@@ -90,7 +118,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8jN-NJ-T2u">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8jN-NJ-T2u">
                                 <rect key="frame" x="0.0" y="145.5" width="375" height="375"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8jN-NJ-T2u" secondAttribute="height" multiplier="1:1" id="pe7-pO-wBS"/>
