--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -120,7 +120,10 @@
                                                         <color key="backgroundColor" red="0.79578083753585815" green="0.80400365591049194" blue="0.80391645431518555" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="next"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="X9M-VO-IFs" id="Zi8-qs-7PW"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.92591744661331177" green="0.91050523519515991" blue="0.86862003803253174" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -148,7 +151,10 @@
                                                         <color key="backgroundColor" red="0.79578083749999995" green="0.8040036559" blue="0.80391645430000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="next"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="X9M-VO-IFs" id="FbB-Nd-sAw"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.92591744659999997" green="0.91050523520000004" blue="0.86862003799999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -176,7 +182,10 @@
                                                         <color key="backgroundColor" red="0.79578083749999995" green="0.8040036559" blue="0.80391645430000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="X9M-VO-IFs" id="IHA-By-X1V"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.92591744659999997" green="0.91050523520000004" blue="0.86862003799999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -204,7 +213,10 @@
                                                         <color key="backgroundColor" red="0.79578083749999995" green="0.8040036559" blue="0.80391645430000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="next"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="X9M-VO-IFs" id="OAc-1l-NeW"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.92591744659999997" green="0.91050523520000004" blue="0.86862003799999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -232,7 +244,10 @@
                                                         <color key="backgroundColor" red="0.79578083749999995" green="0.8040036559" blue="0.80391645430000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="X9M-VO-IFs" id="IBN-6V-rFu"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.92591744659999997" green="0.91050523520000004" blue="0.86862003799999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -260,7 +275,10 @@
                                                         <color key="backgroundColor" red="0.79578083749999995" green="0.8040036559" blue="0.80391645430000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="X9M-VO-IFs" id="UhC-cf-r1e"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.92591744659999997" green="0.91050523520000004" blue="0.86862003799999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -288,7 +306,10 @@
                                                         <color key="backgroundColor" red="0.79578083749999995" green="0.8040036559" blue="0.80391645430000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="done" secureTextEntry="YES"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="X9M-VO-IFs" id="99m-NY-OmK"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.92591744659999997" green="0.91050523520000004" blue="0.86862003799999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -347,6 +368,15 @@
                             <constraint firstItem="6g6-ZD-cuo" firstAttribute="leading" secondItem="Xob-TF-rAM" secondAttribute="leading" id="vH5-Ox-ZbC"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addressTextField" destination="jEJ-mP-nEv" id="ejf-aj-gBN"/>
+                        <outlet property="emailTextField" destination="Df2-qH-alZ" id="bmM-9n-gI4"/>
+                        <outlet property="nameTextField" destination="qCU-LF-0GX" id="z7i-f1-lkt"/>
+                        <outlet property="passwordTextField" destination="nAc-XJ-rle" id="MJY-ex-RYd"/>
+                        <outlet property="phoneTextField" destination="IwS-IU-AIv" id="B6D-qf-K1f"/>
+                        <outlet property="sexTextField" destination="aoF-ct-f3R" id="xSU-KR-tEs"/>
+                        <outlet property="zipTextField" destination="YLJ-Tg-0er" id="9tU-kk-T1e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mq7-jN-amB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
